# digit-detection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  wxWidgetsInstallation.md
development_folder/wxwidget/: main.cpp
docs/: wxWidgetsInstallation.md
include/neural/Activation_Functions/: Activations.h  CallActivation.h  CallCost.h  Costs.h  CrossEntropy.h  MeanSquaredError.h  ReLU.h  Sigmoid.h  Softmax.h
include/neural/Layers/: Layer.h
include/neural/Learning_Data/: LayerLearningData.h  NetworkLearningData.h
include/neural/Network/: NetworkSettings.h  NeuralNetwork.h
include/neural/Training/: Batch.h  DatasetHandling.h  EvaluationData.h  NetworkEvaluator.h  NetworkTest.h  NetworkTrainer.h
include/wxwidget/: Frame.h
sandbox/: Makefile  main.cpp
sandbox/Neural Network/Activation Functions/: ActivationType.h  Activations.h  CallActivation.cpp  CallActivation.h  CallCost.cpp  CostType.h  Costs.h  CrossEntropy.cpp  DataPoint.cpp  DataPoint.h  Layer.cpp  Layer.h  LayerLearningData.cpp  LayerLearningData.h  MeanSquaredError.cpp  NetworkLearningData.cpp  NetworkLearningData.h  NeuralNetwork.cpp  NeuralNetwork.h  ReLU.cpp  Sigmoid.cpp  Sigmoid.h  Softmax.cpp
sandbox/Neural Network/Data Handling/: DataPoint.cpp  DataPoint.h
sandbox/Neural Network/Layers/: Layer.cpp  Layer.h
sandbox/Neural Network/Learning Data/: LayerLearningData.cpp  LayerLearningData.h  NetworkLearningData.cpp  NetworkLearningData.h
sandbox/Neural Network/Network/: NetworkSettings.cpp  NetworkSettings.h  NeuralNetwork.cpp  NeuralNetwork.h
sandbox/Neural Network/Training/: Batch.cpp  Batch.h  DatasetHandling.cpp  DatasetHandling.h  NetworkEvaluator.cpp  NetworkEvaluator.h  NetworkTest.h  NetworkTrainer.cpp  NetworkTrainer.h  network_tester.cpp
sandbox/Neural_Network/: Makefile
sandbox/Neural_Network/Activation_Functions/: CallCost.cpp  CallCost.h  CostType.h  CrossEntropy.h  MeanSquaredError.cpp  MeanSquaredError.h  ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h  Softmax.cpp  Softmax.h  makefile
sandbox/Neural_Network/Data_Handling/: DataPoint.cpp  DataPoint.h  makefile
sandbox/Neural_Network/Layers/: Layer.cpp  Layer.h  makefile
sandbox/Neural_Network/Learning_Data/: LayerLearningData.cpp  NetworkLearningData.cpp  NetworkLearningData.h  makefile
sandbox/digit_detection_v1/: CMakeLists.txt  Makefile
sandbox/digit_detection_v1/include/neural/: Activations.h
sandbox/digit_detection_v1/include/wxwidget/: window.h
sandbox/digit_detection_v1/src/: main.cpp
sandbox/digit_detection_v1/src/wxwidget/: window.cpp
sandbox/wxwidget/: window.cpp  window.h
src/: main.cpp  wxWidgetsInstallation.txt
src/neural/: Activations.cpp
src/wxwidget/: Frame.cpp
(+31 files in other folders)
